qc pass: p4lang: hairpin qinq routing
qc pass: p4lang: hairpin qinq bridging
qc pass: p4lang: hairpin qinq mpls
qc pass: p4lang: hairpin qinq pppoe routing
qc pass: p4lang: hairpin qinq vpls/ldp with bgp
qc pass: p4lang: hairpin qinq eompls
qc pass: p4lang: qinq evpn/cmac with bgp
qc pass: p4lang: bundle qinq evpn/cmac with bgp
qc pass: p4lang: hairpin qinq evpn/cmac with bgp
qc pass: p4lang: gre routing over qinq
qc pass: p4lang: gre routing over bundle qinq
qc pass: p4lang: gre routing over hairpin qinq
qc pass: p4lang: gre routing over qinq bridge
qc pass: p4lang: gre mpls over qinq
qc pass: p4lang: l2tp routing over qinq
qc pass: p4lang: l2tp mpls over qinq
qc pass: p4lang: vxlan over qinq
qc pass: p4lang: pckoudp over qinq
qc pass: p4lang: multicast qinq routing
qc pass: p4lang: multicast bundle qinq routing
qc pass: p4lang: mldp qinq core
qc pass: p4lang: mldp bundle qinq core
qc pass: p4lang: mldp qinq egress edge
qc pass: p4lang: mldp qinq ingress edge
qc pass: p4lang: bier qinq core
qc pass: p4lang: bier bundle qinq core
qc pass: p4lang: qinq nsh
qc pass: p4lang: qinq polka
qc pass: p4lang: l2vpn over bundle qinq mpls
qc pass: p4lang: l3vpn over bundle qinq mpls
qc pass: p4lang: qinq local connect
qc pass: p4lang: qinq pmtud
qc pass: p4lang: qinq tcpmss
qc pass: p4lang: qinq bridge tcpmss
---------------------------------- 2024-08-07 19:53:43 24.8.7
qc pass: interop1: qinq encapsulation
qc pass: interop2: qinq encapsulation
qc pass: interop2: dot1q in dot1ad encapsulation
qc pass: interop9: qinq encapsulation
---------------------------------- 2024-08-10 05:11:59 24.8.10
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-08-10 06:00:56 24.8.10
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-08-20 07:59:06 24.8.20
no qc pass: p4lang downlink
no qc pass: p4lang demultiplexer
failed: p4lang demultiplexer
failed: p4lang downlink