@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.21-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-21 05:34:47, took 00:13:15, with 60 workers, on 3532 cases, 2 failed, 0 traces, 21 retries
+-;-;-;2024-08-21 05:59:39, took 00:13:04, with 60 workers, on 3532 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -329,8 +329,8 @@ http://sources.freertr.org/cfg/conn-nvgre10.tst;conn-nvgre10.tst;success;sep tun
 http://sources.freertr.org/cfg/conn-nvgre11.tst;conn-nvgre11.tst;success;ethernet tunneling with nvgre
 http://sources.freertr.org/cfg/conn-nvgre12.tst;conn-nvgre12.tst;success;vlan tunneling with nvgre
 http://sources.freertr.org/cfg/conn-nvgre13.tst;conn-nvgre13.tst;success;tunnel interface with nvgre
-http://sources.freertr.org/cfg/conn-p4lang01.tst;conn-p4lang01.tst;#6-run-r1 tping 100 5 1.1.1.2 vrf v1;p4lang demultiplexer
-http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;#6-run-r1 tping 100 5 1.1.1.2 vrf v1;p4lang downlink
+http://sources.freertr.org/cfg/conn-p4lang01.tst;conn-p4lang01.tst;success;p4lang demultiplexer
+http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;success;p4lang downlink
 http://sources.freertr.org/cfg/conn-pckoi01.tst;conn-pckoi01.tst;success;pckoip over ipv4
 http://sources.freertr.org/cfg/conn-pckoi02.tst;conn-pckoi02.tst;success;pckoip over ipv6
 http://sources.freertr.org/cfg/conn-pckoi03.tst;conn-pckoi03.tst;success;pckoip over pckoip
