@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.21-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-21 05:44:29, took 00:09:20, with 60 workers, on 631 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2024-08-21 06:08:51, took 00:08:50, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
